tests/errors/regex_bad_quantifier.lq
# A dangling quantifier (nothing to repeat) is a clean catchable error.
regex.test("a**", "x")
